# starcolorkeyboard

./: Cargo.toml  README.md
base/: Cargo.toml
base/src/: main.rs
carioex/: Cargo.toml
carioex/asserts/layoutassert/: us.json
carioex/asserts/mainkeylayout/: enUS.json
carioex/src/: dispatch.rs  keyboardlayouts.rs  main.rs  otherkeys.rs  pangoui.rs
carioex/src/pangoui/: mainkeyboard.rs  smallkeyboard.rs
src/: consts.rs  dispatch.rs  main.rs  pangoui.rs
starcolorkeyboard/: Cargo.toml
starcolorkeyboard/asserts/mainkeylayout/: enUS.json
starcolorkeyboard/src/: consts.rs  dispatch.rs  main.rs  otherkeys.rs  pangoui.rs
starcolorkeyboard/src/pangoui/: mainkeyboard.rs  smallkeyboard.rs
