[package]
name = "starcolorkeyboard"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xkbcommon = "0.6.0"

layershellev = { git = "https://github.com/waycrate/layershelleventloop" }

#calloop = "0.12.1"
tempfile = "3.8.0"

cairo-rs = "0.18.2"
pango = "0.18.0"
pangocairo = "0.18.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.4.0"
memmap2 = "0.9.0"
