[package]
name = "layershellexbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.31.0", default-features = false, features = [
	"unstable",
	"client",
] }
#wayland-protocols = { version = "=0.30.0-beta.13", features = ["client", "unstable"] }


wayland-protocols-wlr = { version = "0.2.0", default-features = false, features = [
	"client",
] }
wayland-client = { version = "0.31.1" }

tempfile = "3.8.0"
