[package]
name = "starcolorkeyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.30.0", default-features = false, features = [
	"unstable",
	"client",
] }
#wayland-protocols = { version = "=0.30.0-beta.13", features = ["client", "unstable"] }


wayland-protocols-wlr = { version = "0.1.0", default-features = false, features = [
	"client",
] }

wayland-protocols-misc = { version = "0.1.0", features = ["client"] }

wayland-client = { version = "0.30.1", features = ["calloop"] }

xkbcommon = "0.5.0"


calloop = "0.10.5"
tempfile = "3.5.0"

cairo-rs = { version = "0.17.0", features = ["png"] }
pango = "0.17.4"
pangocairo = "0.17.0"

image = { version = "0.24", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.3.3"
